--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                 </li>
               </ul>
               <form class="d-flex position-relative" role="search header-row-2-search">
-                <input class="form-control me-2" style="width: 100%" type="search" placeholder="Search"
-                  aria-label="Search" />
+                <input id="searchInput" class="form-control me-2" style="width: 100%" type="search" placeholder="Search" aria-label="Search" />
                 <span class="material-symbols-outlined search-icon">search</span>
               </form>
+     
 
               <div class="header-row-2-user ms-2 mt-2">
                 <span class="material-symbols-outlined">person</span>
@@ -160,7 +160,7 @@
           <div class="text-start">
             <a href="#" class="text-decoration-none" style="color: #000">
               <h5 class="card-title product-name product-name">
-                Màn Hình Gaming ASUS TUF Gaming VG27AQ3A Full HD (1080p) 144 inch
+                Màn Hình Dell VG27AQ3A Full HD (1080p) 144 inch
               </h5>
             </a>
             <p class="card-text text-danger fw-bold">8.990.000₫</p>
@@ -190,7 +190,7 @@
           <div class="text-start">
             <a href="#" class="text-decoration-none" style="color: #000">
               <h5 class="card-title product-name">
-                Màn Hình Gaming ASUS TUF Gaming VG27AQ3A Full HD (1080p) 144 inch
+                Màn Hình DELL VG27AQ3A Full HD (1080p) 144 inch
               </h5>
             </a>
             <p class="card-text text-danger fw-bold">8.990.000₫</p>
@@ -289,7 +289,7 @@
           <div class="text-start">
             <a href="#" class="text-decoration-none" style="color: #000">
               <h5 class="card-title product-name">
-                Màn Hình Gaming ASUS TUF Gaming VG27AQ3A Full HD (1080p) 144 inch
+                Màn Hình DELL VG27AQ3A Full HD (1080p) 144 inch
               </h5>
             </a>
             <p class="card-text text-danger fw-bold">8.990.000₫</p>
